--- a/PaymentInterfaceProject/src/main/java/userinterface/Registration.form
+++ b/PaymentInterfaceProject/src/main/java/userinterface/Registration.form
@@ -47,19 +47,17 @@
                                       <Component id="jLabel4" alignment="0" max="32767" attributes="0"/>
                                   </Group>
                                   <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Component id="emailField" max="32767" attributes="0"/>
+                                  <Component id="emailField" pref="102" max="32767" attributes="0"/>
                                   <Component id="userNameField" max="32767" attributes="0"/>
                                   <Component id="mobileField" alignment="0" max="32767" attributes="0"/>
                                   <Component id="passField" max="32767" attributes="0"/>
-                                  <Component id="codeField" pref="102" max="32767" attributes="0"/>
                               </Group>
                           </Group>
-                          <Component id="signUpButton" max="32767" attributes="0"/>
                           <Component id="loginButton" alignment="0" max="32767" attributes="0"/>
+                          <Component id="signUpButton" alignment="0" min="-2" pref="228" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
@@ -104,15 +102,10 @@
                   <Component id="pV" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="codeField" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="signUpButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="loginButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="371" max="32767" attributes="0"/>
+              <EmptySpace pref="412" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -174,16 +167,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="signUpButtonActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JLabel" name="jLabel6">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Code:"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JTextField" name="codeField">
-      <Properties>
-        <Property name="enabled" type="boolean" value="false"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="loginButton">
       <Properties>
